// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`collectFbt When using string templates should extract correctly multiple params 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "counting",
          "text": "{1} {2} {2} 3",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 86,
          "index": 129,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 43,
          "line": 3,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          null,
          null,
        ],
        "t": {
          "*": {
            "*": {
              "*": {
                "desc": "desc",
                "text": "{name} sells their items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells their item",
              },
            },
            "1": {
              "*": {
                "desc": "desc",
                "text": "{name} sells her items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells her item",
              },
            },
            "2": {
              "*": {
                "desc": "desc",
                "text": "{name} sells his items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells his item",
              },
            },
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 119,
          "index": 238,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 119,
          "line": 4,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly supports tables ie fbt:enum 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [
          null,
        ],
        "t": {
          "0": {
            "desc": "counting",
            "text": "a {2} {2} 3",
          },
          "1": {
            "desc": "counting",
            "text": "b {2} {2} 3",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 37,
          "index": 139,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 43,
          "line": 3,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with a param 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "great",
          "text": "testing {it} works",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 52,
          "index": 95,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 43,
          "line": 3,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with just string contents 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "ok",
          "text": "simple",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 19,
          "index": 62,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 43,
          "line": 3,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with the param being first 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "well",
          "text": "{it} still works",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 49,
          "index": 92,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 43,
          "line": 3,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes when needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "node": Node {
              "attributes": [
                Node {
                  "end": 120,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 36,
                      "index": 120,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 15,
                      "index": 99,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 108,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 24,
                        "index": 108,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 15,
                        "index": 99,
                        "line": 4,
                      },
                    },
                    "name": "className",
                    "start": 99,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 99,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 120,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 36,
                        "index": 120,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 25,
                        "index": 109,
                        "line": 4,
                      },
                    },
                    "start": 109,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Node {
                  "end": 152,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 68,
                      "index": 152,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 37,
                      "index": 121,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 125,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 41,
                        "index": 125,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 37,
                        "index": 121,
                        "line": 4,
                      },
                    },
                    "name": "href",
                    "start": 121,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 121,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 152,
                    "extra": {
                      "raw": ""https://somewhere.random"",
                      "rawValue": "https://somewhere.random",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 68,
                        "index": 152,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 42,
                        "index": 126,
                        "line": 4,
                      },
                    },
                    "start": 126,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "https://somewhere.random",
                  },
                },
                Node {
                  "end": 167,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 83,
                      "index": 167,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 69,
                      "index": 153,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 161,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 77,
                        "index": 161,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 69,
                        "index": 153,
                        "line": 4,
                      },
                    },
                    "name": "tabindex",
                    "start": 153,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 153,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 167,
                    "expression": Node {
                      "end": 166,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 82,
                          "index": 166,
                          "line": 4,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 79,
                          "index": 163,
                          "line": 4,
                        },
                      },
                      "start": 163,
                      "trailingComments": undefined,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 83,
                        "index": 167,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 78,
                        "index": 162,
                        "line": 4,
                      },
                    },
                    "start": 162,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
                Node {
                  "end": 179,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 95,
                      "index": 179,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 84,
                      "index": 168,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 170,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 86,
                        "index": 170,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 84,
                        "index": 168,
                        "line": 4,
                      },
                    },
                    "name": "id",
                    "start": 168,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 168,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 179,
                    "expression": Node {
                      "end": 178,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 94,
                          "index": 178,
                          "line": 4,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 88,
                          "index": 172,
                          "line": 4,
                        },
                      },
                      "start": 172,
                      "trailingComments": undefined,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 95,
                        "index": 179,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 87,
                        "index": 171,
                        "line": 4,
                      },
                    },
                    "start": 171,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 180,
              "innerComments": undefined,
              "leadingComments": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 96,
                  "index": 180,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 12,
                  "index": 96,
                  "line": 4,
                },
              },
              "name": Node {
                "end": 98,
                "innerComments": undefined,
                "leadingComments": undefined,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 14,
                    "index": 98,
                    "line": 4,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 13,
                    "index": 97,
                    "line": 4,
                  },
                },
                "name": "a",
                "start": 97,
                "trailingComments": undefined,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 96,
              "trailingComments": undefined,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "https://somewhere.random",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "filename": "test.js",
      "hashToLeaf": {
        "6CzFRF22gqmcMT9hNd4lFQ==": {
          "desc": "some desc",
          "text": "This is a {=link}",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 16,
          "index": 233,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 10,
          "index": 39,
          "line": 2,
        },
      },
      "project": "",
    },
    {
      "filename": "test.js",
      "hashToLeaf": {
        "vInz7SvwK8Zthis7azxV9Q==": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 16,
          "index": 216,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 12,
          "index": 96,
          "line": 4,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes where there are two nested React elements 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "param",
        },
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
            {
              "children": [
                {
                  "type": "text",
                },
                {
                  "type": "plural",
                },
                {
                  "type": "text",
                },
              ],
              "phraseIndex": 2,
              "type": "implicitParam",
              "wrapperNode": {
                "node": Node {
                  "attributes": [],
                  "end": 321,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 20,
                      "index": 321,
                      "line": 8,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 12,
                      "index": 313,
                      "line": 8,
                    },
                  },
                  "name": Node {
                    "end": 320,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 19,
                        "index": 320,
                        "line": 8,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 314,
                        "line": 8,
                      },
                    },
                    "name": "strong",
                    "start": 314,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "start": 313,
                  "trailingComments": undefined,
                  "type": "JSXOpeningElement",
                },
                "props": {},
                "type": "strong",
              },
            },
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "node": Node {
              "attributes": [
                Node {
                  "end": 263,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 34,
                      "index": 263,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 13,
                      "index": 242,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 251,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 22,
                        "index": 251,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 242,
                        "line": 7,
                      },
                    },
                    "name": "className",
                    "start": 242,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 242,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 263,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 34,
                        "index": 263,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 23,
                        "index": 252,
                        "line": 7,
                      },
                    },
                    "start": 252,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Node {
                  "end": 272,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 43,
                      "index": 272,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 35,
                      "index": 264,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 268,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 39,
                        "index": 268,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 35,
                        "index": 264,
                        "line": 7,
                      },
                    },
                    "name": "href",
                    "start": 264,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 264,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 272,
                    "extra": {
                      "raw": ""#"",
                      "rawValue": "#",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 43,
                        "index": 272,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 40,
                        "index": 269,
                        "line": 7,
                      },
                    },
                    "start": 269,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "#",
                  },
                },
                Node {
                  "end": 287,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 58,
                      "index": 287,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 44,
                      "index": 273,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 281,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 52,
                        "index": 281,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 44,
                        "index": 273,
                        "line": 7,
                      },
                    },
                    "name": "tabindex",
                    "start": 273,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 273,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 287,
                    "expression": Node {
                      "end": 286,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 57,
                          "index": 286,
                          "line": 7,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 54,
                          "index": 283,
                          "line": 7,
                        },
                      },
                      "start": 283,
                      "trailingComments": undefined,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 58,
                        "index": 287,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 53,
                        "index": 282,
                        "line": 7,
                      },
                    },
                    "start": 282,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
                Node {
                  "end": 299,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 70,
                      "index": 299,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 59,
                      "index": 288,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 290,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 61,
                        "index": 290,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 59,
                        "index": 288,
                        "line": 7,
                      },
                    },
                    "name": "id",
                    "start": 288,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 288,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 299,
                    "expression": Node {
                      "end": 298,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 69,
                          "index": 298,
                          "line": 7,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 63,
                          "index": 292,
                          "line": 7,
                        },
                      },
                      "start": 292,
                      "trailingComments": undefined,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 70,
                        "index": 299,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 62,
                        "index": 291,
                        "line": 7,
                      },
                    },
                    "start": 291,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 300,
              "innerComments": undefined,
              "leadingComments": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 71,
                  "index": 300,
                  "line": 7,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 239,
                  "line": 7,
                },
              },
              "name": Node {
                "end": 241,
                "innerComments": undefined,
                "leadingComments": undefined,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 12,
                    "index": 241,
                    "line": 7,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 11,
                    "index": 240,
                    "line": 7,
                  },
                },
                "name": "a",
                "start": 240,
                "trailingComments": undefined,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 239,
              "trailingComments": undefined,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "#",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
        {
          "type": "text",
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "filename": "test.js",
      "hashToLeaf": {
        "PqPPir8Kg9xSlqdednPFOg==": {
          "desc": "example 1",
          "text": "{name} has shared {=a photo} with you",
        },
        "gVKMc/8jq5vnYR5v2bb32g==": {
          "desc": "example 1",
          "text": "{name} has shared {=[number] photos} with you",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "example 1",
              "text": "{name} has shared {=[number] photos} with you",
              "tokenAliases": {
                "=[number] photos": "=m2",
              },
            },
            "_1": {
              "desc": "example 1",
              "text": "{name} has shared {=a photo} with you",
              "tokenAliases": {
                "=a photo": "=m2",
              },
            },
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 14,
          "index": 580,
          "line": 18,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 8,
          "index": 37,
          "line": 2,
        },
      },
      "project": "",
    },
    {
      "filename": "test.js",
      "hashToLeaf": {
        "2u1unDTClahYJKZKS5RVCQ==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{=[number] photos}",
        },
        "dO3IlAx8hzcJVQxeQOUhkg==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "{=a photo}",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{=[number] photos}",
              "tokenAliases": {
                "=[number] photos": "=m1",
              },
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "{=a photo}",
              "tokenAliases": {
                "=a photo": "=m1",
              },
            },
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 14,
          "index": 546,
          "line": 16,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 10,
          "index": 239,
          "line": 7,
        },
      },
      "project": "",
    },
    {
      "filename": "test.js",
      "hashToLeaf": {
        "Q9mOAQ+ogHG20z2QkEkNmQ==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "a photo",
        },
        "tYYOLLMbffdJQQlSVEVv/A==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{number} photos",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{number} photos",
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "a photo",
            },
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 21,
          "index": 531,
          "line": 15,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 12,
          "index": 313,
          "line": 8,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should create correct child parent mapping for multiple files 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
    "4": 3,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=bold with italic inside}.",
          "tokenAliases": {
            "=bold with italic inside": "=m2",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 18,
          "index": 209,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 12,
          "index": 54,
          "line": 3,
        },
      },
      "project": "",
    },
    {
      "filename": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=bold with italic inside}."",
          "text": "bold with {=italic inside}",
          "tokenAliases": {
            "=italic inside": "=m1",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 18,
          "index": 189,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 14,
          "index": 120,
          "line": 5,
        },
      },
      "project": "",
    },
    {
      "filename": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a bold with {=italic inside}."",
          "text": "italic inside",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 46,
          "index": 170,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 26,
          "index": 150,
          "line": 6,
        },
      },
      "project": "",
    },
    {
      "filename": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "Link: {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 18,
          "index": 173,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 12,
          "index": 54,
          "line": 3,
        },
      },
      "project": "",
    },
    {
      "filename": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Link: {=link}"",
          "text": "link",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 57,
          "index": 154,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 14,
          "index": 111,
          "line": 5,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should dedupe fbt:plurals 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [
          null,
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "desc...",
              "text": "There are {number} photos.",
            },
          },
          "_1": {
            "_1": {
              "desc": "desc...",
              "text": "There is 1 photo.",
            },
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 6,
          "index": 264,
          "line": 9,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 29,
          "line": 2,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the outer token names if needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Expose outer token name when script option is given",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 14,
          "index": 155,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 8,
          "index": 37,
          "line": 2,
        },
      },
      "project": "",
    },
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "outerTokenName": "=World",
          "text": "World",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 22,
          "index": 140,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 10,
          "index": 128,
          "line": 4,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the subject option on top level and inner phrases 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "expose subject",
            "text": "You {=see the world}",
            "tokenAliases": {
              "=see the world": "=m1",
            },
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 14,
          "index": 143,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 8,
          "index": 37,
          "line": 2,
        },
      },
      "project": "",
      "subject": Node {
        "end": 81,
        "innerComments": undefined,
        "leadingComments": undefined,
        "loc": SourceLocation {
          "end": Position {
            "column": 52,
            "index": 81,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": "aSubject",
          "start": Position {
            "column": 44,
            "index": 73,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 73,
        "trailingComments": undefined,
        "type": "Identifier",
      },
    },
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "In the phrase: "You {=see the world}"",
            "text": "see the world",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 30,
          "index": 128,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 10,
          "index": 108,
          "line": 4,
        },
      },
      "project": "",
      "subject": Node {
        "end": 81,
        "innerComments": undefined,
        "leadingComments": undefined,
        "loc": SourceLocation {
          "end": Position {
            "column": 52,
            "index": 81,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": "aSubject",
          "start": Position {
            "column": 44,
            "index": 73,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 73,
        "trailingComments": undefined,
        "type": "Identifier",
      },
    },
  ],
}
`;

exports[`collectFbt should extract common strings from <fbt common={true}> 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "common": true,
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 39,
          "index": 75,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 6,
          "index": 42,
          "line": 3,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbs strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 51,
          "index": 51,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 26,
          "index": 26,
          "line": 1,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 51,
          "index": 51,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 26,
          "index": 26,
          "line": 1,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt.c strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "common": true,
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 23,
          "index": 59,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 6,
          "index": 42,
          "line": 3,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract strings from a custom collector 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "description",
          "text": "Hello {=World}!",
          "tokenAliases": {},
        },
      },
      "loc": {
        "end": {
          "column": 14,
          "line": 5,
        },
        "start": {
          "column": 8,
          "line": 3,
        },
      },
      "project": "",
    },
    {
      "filename": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}!"",
          "outerTokenName": "=World",
          "text": "World",
          "tokenAliases": {},
        },
      },
      "loc": {
        "end": {
          "column": 38,
          "line": 4,
        },
        "start": {
          "column": 16,
          "line": 4,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract the author from Docblock 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "author": "Sponge Bob",
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 25,
          "index": 113,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 88,
          "line": 3,
        },
      },
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should not expose the outer token names by default 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Do not expose outer token name by default",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 14,
          "index": 145,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 8,
          "index": 37,
          "line": 2,
        },
      },
      "project": "",
    },
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "text": "World",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 22,
          "index": 130,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 10,
          "index": 118,
          "line": 4,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if fbt call param doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 69,
          "line": 2,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 29,
          "line": 2,
        },
      },
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if file-level doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 25,
          "index": 112,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 87,
          "line": 3,
        },
      },
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if in-line doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "filename": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 46,
          "index": 75,
          "line": 2,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 0,
          "index": 29,
          "line": 2,
        },
      },
      "project": "",
    },
  ],
}
`;
